--- a/style.css
+++ b/style.css
@@ -1,46 +1,74 @@
-body{
-    background-color: brown;
-    font-size: 18px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif  ;
-}
-#header{
-    float: left;;
-    margin: 10%;
-    font-weight: 15;
+*{
+ background-color: lightgrey;
+ font-size: 18px;
+ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif  ;
+    }
+    #header{
+        float: left;;
+        margin: 10%;
+        font-weight: 15;
 
-}
-#nav-bar{
-    text-align: right;
-    position: relative;
-    text-decoration: none;
-    list-style: none;
     
-}
-ul{
-    list-style: none;
-
-}
-#header{
-    text-align: center;
-    font-size: large;
-    color: black;
+    }
+    #nav-bar{
+        text-align: right;
+        position: relative;
+        text-decoration: none;
+        list-style: none;
+        margin-bottom: 14px;
+        display:block;
+        box-sizing: border-box;
     
-}
-form{
-    text-align: center;
-    font-size: larger;
-    padding: 15px 18px;
-}
-#submit{
-    text-align: center;
-    background-color: yellow;
-    border: none;
-    padding: 14px 16px;
-} 
-.container{
-    margin-right: 8%;
-
-}
-p{
-    text-align: center;
-}       
+    }
+    ul{
+        list-style: none;
+    
+    }
+    #header{
+        text-align: center;
+        font-size: large;
+        color: black;
+    
+    }
+    .info{
+        font-size:150%;
+        float:center;
+    }
+    form{
+        text-align: center;
+        font-size: larger;
+        padding: 15px 18px;
+    }
+    #submit{
+        text-align: center;
+        background-color: yellow;
+        border: none;
+        padding: 14px 16px;
+        margin-top:1.2%;
+        margin-right:50%,
+    } 
+    .desc{
+        margin:8%
+    }
+    .how{
+        text-align: center;
+        margin-bottom:5%;
+    }
+   .product{
+    display:inline-block;
+    margin-left:10%;
+    width:20%;
+    
+    
+   }
+   .level{
+    background-color:grey;
+   }
+   .btn{
+    margin-left:8%;
+    background-color:yellow;
+   }
+   .end{
+    float:right;
+    position:relative
+   }
